--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <img id="mainpic" src="IMG_20210605_211014.jpg" alt="Аватарка" />
         </div>
         <div class="text">
-          <h1>Аленькин Даниил</h1>
+          <h1 class="vitalik">Аленькин Даниил</h1>
           <p>
             <strong><em>Студент</em></strong> Санкт-Петербургского
             Государственного экономического университета.
